--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     </div>
   </div>
 </div>
+<!-- VENTANAS EMERGENTES -->
 
 <div class="container my-4">
   <h2 class="text-center mb-4">Plan de Estudios</h2>
@@ -490,20 +491,94 @@
   </div>
 </div>
 
-<!-- Como ejemplo final, la sección de contacto y footer -->
-<div id="contact-sec" style="background:#f8f9fa;padding:50px 0;">
-  <div class="container">
-    <h1 class="text-center mb-4">CONTACT US</h1>
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <!-- formulario o contenido -->
+<!-- Carrusel de testimonios -->
+<div id="testimoniosCarousel" class="carousel slide my-5" data-bs-ride="carousel">
+  <div class="carousel-inner">
+
+    <!-- Primer slide: 2 testimonios -->
+    <div class="carousel-item active">
+      <div class="row">
+        <!-- Testimonio 1 -->
+        <div class="col-md-6 mb-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Juan Pérez</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Egresado 2022</h6>
+              <p class="card-text">"Gracias a la carrera logré trabajar en una empresa de tecnología, y mis conocimientos y habilidades se potenciaron muchísimo."</p>
+            </div>
+            <div class="card-footer d-flex align-items-center">
+              <img src="https://via.placeholder.com/50" class="rounded-circle me-3" alt="Juan">
+              <small class="text-muted">Ingeniero en Programación Web</small>
+            </div>
+          </div>
+        </div>
+        <!-- Testimonio 2 -->
+        <div class="col-md-6 mb-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">María Gómez</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Egresada 2021</h6>
+              <p class="card-text">"Lo que más me gustó fue la práctica real en proyectos que enfrenté y que me ayudaron a conseguir empleo rápidamente."</p>
+            </div>
+            <div class="card-footer d-flex align-items-center">
+              <img src="https://via.placeholder.com/50" class="rounded-circle me-3" alt="María">
+              <small class="text-muted">Especialista en Diseño Web</small>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+
+    <!-- Segundo slide: 2 testimonios -->
+    <div class="carousel-item">
+      <div class="row">
+        <!-- Testimonio 3 -->
+        <div class="col-md-6 mb-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Carlos López</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Egresado 2020</h6>
+              <p class="card-text">"Aprendí a crear aplicaciones webs modernas y responsivas, y ahora trabajo en una startup innovadora."</p>
+            </div>
+            <div class="card-footer d-flex align-items-center">
+              <img src="https://via.placeholder.com/50" class="rounded-circle me-3" alt="Carlos">
+              <small class="text-muted">Desarrollador Frontend</small>
+            </div>
+          </div>
+        </div>
+        <!-- Testimonio 4 -->
+        <div class="col-md-6 mb-4">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Ana Torres</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Egresada 2019</h6>
+              <p class="card-text">"Me encantó la formación integral en diseño y programación, ahora tengo mi propia empresa."</p>
+            </div>
+            <div class="card-footer d-flex align-items-center">
+              <img src="https://via.placeholder.com/50" class="rounded-circle me-3" alt="Ana">
+              <small class="text-muted">Emprendedora Digital</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Agrega más slides si quieres más testimonios -->
   </div>
+
+  <!-- Controles -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#testimoniosCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+    <span class="visually-hidden">Anterior</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#testimoniosCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+    <span class="visually-hidden">Siguiente</span>
+  </button>
 </div>
 
 <!-- Footer -->
-<footer class="bg-primary text-white pt-4" style="background-color:#0050af; ">
+<footer class="bg-primary text-white" style="background-color:#0050af;">
   <div class="container">
     <div class="row" style="margin-top:50px;">
       <!-- Logo y descripción -->
